Move starter CSS to SCSS partials

--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -1,9 +1,9 @@
  /* ============================================= */ 
  /* Components Imports */ 
  /* ============================================= */ 
- @use 'buttons'; 
- @use 'forms'; 
- @use 'navigation'; 
- @use 'images'; 
- @use 'grid'; 
- @use 'media-queries'; 
+ @import 'buttons'; 
+ @import 'forms'; 
+ @import 'navigation'; 
+ @import 'images'; 
+ @import 'grid'; 
+ @import 'media-queries'; 
